--- a/src/AppGame.css
+++ b/src/AppGame.css
@@ -110,4 +110,9 @@
     text-align: center;
     margin-bottom: 20px;
   }
+
+/* BAKCGROUND */
+  .canvasback{
+    background-color: lightgray;
+  }
   
